# plugin-agent

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md
backend/: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/src/plugin_agent/: __init__.py  assembly.py  cli.py  contracts.py  http_service.py  kernel.py  logging_config.py  plugin_store.py  server.py  worker_main.py
backend/src/plugin_agent/api/: __init__.py  agent.py  app.py  deps.py  plugin.py  responses.py  router.py  runtime.py  session.py  uploads.py
backend/src/plugin_agent/models/: records.py
backend/src/plugin_agent/plugins/: __init__.py  schemas.py
backend/src/plugin_agent/plugins/agent_loop_react/: __init__.py  manifest.yaml  plugin.py
backend/src/plugin_agent/plugins/context_compressor_summary/: config.yaml  manifest.yaml  plugin.py
backend/src/plugin_agent/plugins/context_manager/: manifest.yaml  plugin.py
backend/src/plugin_agent/runtime/: __init__.py  manager.py  protocol.py  proxy.py
backend/src/plugin_agent/services/: __init__.py  assembly_service.py
backend/src/plugin_agent/stores/: __init__.py  product_store.py  secret_store.py
backend/src/plugin_agent/utils/: config.py  versions.py
backend/src/plugin_agent_sdk/: __init__.py  contracts.py  plugin.py
backend/tests/: plugin_test_utils.py  test_builtin_plugins.py  test_cli.py  test_http_service.py  test_http_tool_plugin.py  test_kernel.py  test_logging_config.py  test_plugin_market.py  test_product_model.py  test_real_plugins.py  test_sdk.py  test_worker_runtime.py
docker/: .env.example  README.md  (+1 more)
(+110 files in other folders)
