[project]
name = "plugin-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "leggasai", email = "jyc132780208@sina.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "jsonschema>=4.26.0",
    "packaging>=26.2",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
plugin-agent = "plugin_agent:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
